chore(ef): database migrations

--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TaskMasterTest.MainPage">
+             x:Class="TaskMaster.MainPage">
 
     <ScrollView>
         <VerticalStackLayout
@@ -19,10 +19,10 @@
                 SemanticProperties.HeadingLevel="Level1" />
 
             <Label
-                Text="Cliquez sur ce bouton pour tuer Quentin Lorenzo"
+                Text="Cliquez sur ce bouton pour faire plein de bisous a Quentin Lorenzo"
                 Style="{StaticResource SubHeadline}"
                 SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Cliquez sur ce bouton pour tuer Quentin Lorenzo" />
+                SemanticProperties.Description="Cliquez sur ce bouton pour faire plein de bisous a Quentin Lorenzo" />
 
             <Button
                 x:Name="CounterBtn"
