--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Shell
-    x:Class="TaskMasterTest.AppShell"
+    x:Class="TaskMaster.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:TaskMasterTest"
+    xmlns:local="clr-namespace:TaskMaster"
     Shell.FlyoutBehavior="Flyout"
-    Title="TaskMasterTest">
+    Title="TaskMaster">
 
     <ShellContent
         Title="Home"
