--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -3,13 +3,18 @@
     x:Class="TaskMasterTest.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:TaskMasterTest"
+    xmlns:local="clr-namespace:TaskMasterTest.UI.Views"
     Shell.FlyoutBehavior="Flyout"
     Title="TaskMasterTest">
 
-    <ShellContent
-        Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
-
+    <ShellContent 
+        Title="Login"
+        ContentTemplate="{DataTemplate local:LoginPage}"
+        Route="LoginPage" />
+    
+    <ShellContent 
+        Title="Tasks"
+        ContentTemplate="{DataTemplate local:TaskListPage}"
+        Route="TaskListPage" />
+    
 </Shell>
