--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -17,5 +17,10 @@
         Title="Tasks"
         ContentTemplate="{DataTemplate views:TaskListPage}"
         Route="TaskListPage" />
-    
+
+    <ShellContent 
+        Title="Inscription"
+        ContentTemplate="{DataTemplate views:RegisterPage}"
+        Route="RegisterPage" />
+
 </Shell>
