--- a/Views/LoginPage.xaml
+++ b/Views/LoginPage.xaml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:vm="clr-namespace:TaskMaster.UI.ViewModels"
              x:Class="TaskMaster.UI.Views.LoginPage"
              Title="Connexion">
-    <ContentPage.BindingContext>
-        <vm:LoginPageViewModel />
-    </ContentPage.BindingContext>
     <StackLayout Padding="20" Spacing="15">
         <Entry Placeholder="Email" Text="{Binding Email}" />
         <Entry Placeholder="Mot de passe" Text="{Binding Password}" IsPassword="True" />
+        <Label Text="{Binding ErrorMessage}" TextColor="Red" />
         <Button Text="Se connecter" Command="{Binding LoginCommand}" />
         <Label Text="Inscription"
            HorizontalOptions="Center"
