Fin projet avec ajout de taches

--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -23,4 +23,9 @@
         ContentTemplate="{DataTemplate views:RegisterPage}"
         Route="RegisterPage" />
 
+    <ShellContent 
+        Title="Création"
+        ContentTemplate="{DataTemplate views:CreateTaskPage}"
+        Route="CreateTaskPage" />
+
 </Shell>
